--- a/src/Component/Shopping/Shopping.scss
+++ b/src/Component/Shopping/Shopping.scss
@@ -62,7 +62,7 @@
     line-height: 2rem;
     padding: 0 5px;
 }
-.shopping-item-actual {
+.shopping-item-display {
   text-decoration: line-through;
   text-decoration-style:solid;
   text-decoration-color: red;
